samples/_failures_safe/1761717777_1b2814_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bc8a1189.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_bc8a1189.c:151:13: error: expected declaration or statement at end of input
  151 |             case TOKEN_STRING: type_str = "STRING";
      |             ^~~~
./samples/SAFE/__tmp_bc8a1189.c:151:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_bc8a1189.c:151:13: error: expected declaration or statement at end of input
